# trajopt

./: .clang-format  CMakeLists.txt  format.py
.devcontainer/: Dockerfile  devcontainer.json  install-dependencies.sh  install-openrave.sh  install-osg.sh
cpp_examples/: CMakeLists.txt  arm.cpp  armload.cpp  dual_arm.cpp  get_data_dir.h.in  get_dir.h.in  spatial_temporal_opt.cpp  time_optimal_no_collision.cpp  with_time_profile.cpp
cpp_examples/config/: dual_arm.json  get_feasible_no_collision.json  time_optimal.json
cpp_examples/config/abb/: above.json  get_feasible_no_collision.json  spatial_temporal.json  time_profile.json
cpp_examples/config/dual_arm_config/: above.json  crossarm.json  underneath.json
data/: arm_around_table.json  time_optimal.json
data/abb/: .gitignore
ext/gtest/: CMakeLists.txt
python_examples/: arm_to_cart_target.py  arm_to_joint_target.py  drc_walk.py
src/: CMakeLists.txt  macros.h  numpy_utils.hpp  openrave_userdata_utils.hpp
src/cloudproc/: autogen_instantiations.cpp  cloudgrabber.cpp  cloudgrabber.hpp  cloudproc.cpp  cloudproc.hpp  cloudprocpy.cpp  convex_decomp_test.cpp  convexdecomp.cpp  convexdecomp.hpp  convexdecomp2.cpp  convexdecomp_nopcl.cpp  convexdecomp_nopcl.hpp  hacd_interface.cpp  hacd_interface.hpp  mesh_simplification.cpp  mesh_simplification.hpp  opm_test.cpp  simplify_test.cpp  sphere_sampling.cpp  sphere_sampling.hpp  surface_recon_test.cpp  vtkQuadricDecimation2.cxx  vtkQuadricDecimation2.h
src/humanoids/: CMakeLists.txt  hull2d.cpp  hull2d.hpp  humanoids.cpp  humanoids.hpp  humanoidspy.cpp  rave_to_rbdl.cpp  rave_to_rbdl.hpp  rbdl-unit.cpp  zmp_test.cpp
src/osgviewer/: CMakeLists.txt  osgravemain.cpp  osgviewer.cpp  osgviewer.hpp  robot_ui.cpp  robot_ui.hpp
src/osgviewer/test/: CMakeLists.txt  osg_async_animation.cpp  osg_expt.cpp  robot_animation.cpp  robotui_expt.cpp  test_osgviewer_text.cpp  viewer_animation.cpp  viewer_experiment.cpp
src/sandbox/: CMakeLists.txt  cloud_convex_decomp_experiment.cpp  compl_test.cpp  complementarity.cpp  complementarity.hpp  composite_config.hpp  dubins_car.cpp  dynamics_utils.hpp  incremental_rb.hpp  needle_steering.cpp  o3.cpp  o3.hpp  polygon_expt.cpp  pushing.cpp  quat_ops.hpp  quaternion_optimization.cpp  rigid_body_simulation.cpp  robot_dynamics.cpp  static_object.hpp
src/sco/: CMakeLists.txt  bpmpd_caller.cpp  bpmpd_interface.cpp  bpmpd_interface.hpp  bpmpd_io.hpp  expr_op_overloads.hpp  expr_ops.cpp  expr_ops.hpp  expr_vec_ops.cpp  expr_vec_ops.hpp  gurobi_interface.cpp  gurobi_interface.hpp  modeling.cpp  modeling.hpp  modeling_utils.cpp  modeling_utils.hpp  num_diff.cpp  num_diff.hpp  optimizers.cpp  optimizers.hpp  sco_common.hpp  sco_fwd.hpp  solver_interface.cpp  solver_interface.hpp
src/sco/test/: CMakeLists.txt  small-problems-unit.cpp  solver-interface-unit.cpp
src/sensorsim/: sensorsimpy.cpp  sim_kinect.cpp  sim_kinect.hpp  sim_kinect_expt.cpp
src/sipp/: CMakeLists.txt  README.md  temporal_graph.cpp  temporal_graph.hpp
src/sipp/test/: CMakeLists.txt  plot_collision_geometries.cpp  sipp.cpp  test_safe_interval_construction.cpp  test_sipp.cpp
src/sipp/test/data/: sphere.xml
src/trajopt/: CMakeLists.txt  bullet_collision_checker.cpp  bullet_unity.cpp  cache.hxx  collision_checker.cpp  collision_checker.hpp  collision_terms.cpp  collision_terms.hpp  common.hpp  configuration_space.cpp  configuration_space.hpp  json_marshal.cpp  json_marshal.hpp  kinematic_terms.cpp  kinematic_terms.hpp  plot_callback.cpp  plot_callback.hpp  plugin.cpp  problem_description.cpp  problem_description.hpp  rave_utils.cpp  rave_utils.hpp  traj_plotter.cpp  traj_plotter.hpp  trajectory_costs.cpp  trajectory_costs.hpp  trajectory_linear_constraints.cpp  trajectory_linear_constraints.hpp  trajoptpy.cpp  typedefs.hpp  utils.cpp  utils.hpp  voxel_collision_checker.cpp
src/trajopt/test/: CMakeLists.txt  bullet_collision_test.cpp  cast-cost-unit.cpp  collision-checker-unit.cpp  json_experiment1.cpp  json_experiment2.cpp  json_experiment3.cpp  planning-unit.cpp  render_collision_test.cpp  test_dualarm_collision.cpp  trajopt_test_utils.hpp
src/utils/: basic_array.hpp  clock.cpp  clock.hpp  config.cpp  config.hpp  eigen_conversions.hpp  eigen_slicing.hpp  interpolation.hpp  logging.cpp  logging.hpp  math.hpp  repeatedTimer.hpp  stl_to_string.cpp  stl_to_string.hpp  vector_ops.hpp
